# Alfak

./: Dockerfile  Doxyconf  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSON_8h_source.html  Makefile  Makefile.txt  Monster.cpp  Monster.h  Monster_8h_source.html  README.md  alpha.cpp  annotated.html  autotoc_md0.html  character.cpp  character.h  character_8h_source.html  charactermeth.cpp  classCharacter-members.html  classCharacter.html  classCharacter__inherit__graph.map  classCharacter__inherit__graph.md5  classGame-members.html  classGame.html  classHero-members.html  classHero.html  classHero__coll__graph.map  classHero__coll__graph.md5  classHero__inherit__graph.map  classHero__inherit__graph.md5  classJSON-members.html  classJSON.html  classJSON_1_1ParseException-members.html  classJSON_1_1ParseException.html  classJSON_1_1ParseException__coll__graph.map  classJSON_1_1ParseException__coll__graph.md5  classMonster-members.html  (+37 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
unitTest/: CMakeLists.txt  test.cpp
units/: out_ok.txt  out_ok2.txt  unit1.json  unit2.json  unit3.json
(+4 files in other folders)
